New image for Sobre Mí section

--- a/src/index.html
+++ b/src/index.html
@@ -49,7 +49,7 @@
                 </h1>
                 <div class="h-[1px] w-32 bg-white reveal-line mb-12" style="animation-delay: 1.2s"></div>
                 <p class="text-lg sm:text-xl font-light tracking-wide text-white/80 max-w-xl mb-16 animate-fade-in leading-relaxed" style="animation-delay: 1.5s">
-                    Disfruta del legado de un maestro dominicano que ha elevado la música sinfónica a escenarios internacionales, llevando la pasión y la excelencia a cada actuación.
+                    Disfruta del legado de un maestro dominicano que fusiona la música clásica con ritmos caribeños, llevando la pasión y la excelencia a cada escenario.
                 </p>
                 <a href="#actuaciones" class="group w-full sm:w-auto px-8 sm:px-12 py-4 border border-white hover:bg-white hover:text-black transition-all duration-500 text-xs tracking-[0.2em] animate-fade-in flex items-center justify-center sm:justify-start gap-4" style="animation-delay: 1.8s">
                     DESCUBRE LAS ACTUACIONES
@@ -60,8 +60,9 @@
     </section>
 
     <!-- Sobre Mí Section -->
-    <section id="sobre-mi" class="py-20 sm:py-40 px-4 sm:px-8 bg-black">
-        <div class="max-w-[2000px] mx-auto text-center">
+    <section id="sobre-mi" class="py-20 sm:py-40 px-4 sm:px-8 relative" style="background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/5/5c/Jose_Antonio_Molina3.jpg/1920px-Jose_Antonio_Molina3.jpg'); background-size: cover; background-position: center;">
+        <div class="absolute inset-0 bg-gradient-to-r from-black/95 to-black/30 md:bg-gradient-to-b md:from-black/30 md:to-black/95"></div>
+        <div class="max-w-[2000px] mx-auto text-center relative z-10">
             <div class="space-y-8 sm:space-y-12">
                 <div class="space-y-4">
                     <p class="text-sm tracking-[0.3em] text-white/60">SOBRE MÍ</p>
@@ -103,6 +104,8 @@
             </div>
         </div>
     </section>
+
+
 
     <script>
         function toggleMenu() {
