--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     <nav class="fixed w-full z-50 nav-blur border-b border-white/10">
         <div class="max-w-[2000px] mx-auto px-4 sm:px-8">
             <div class="flex justify-between h-24 items-center">
-                <div class="text-2xl sm:text-3xl font-light tracking-[0.3em] font-cormorant">MOLINA</div>
+                <div class="text-2xl sm:text-3xl font-light tracking-[0.3em] font-cormorant">JOSE ANTONIO MOLINA</div>
                 <div class="hidden md:flex space-x-16 text-xs tracking-[0.2em]">
                     <a href="#actuaciones" class="hover:underline">ACTUACIONES</a>
                     <a href="#sobre-mi" class="hover:underline">SOBRE MÍ</a>
@@ -39,18 +39,15 @@
             <img src="https://jaocruz.nyc3.cdn.digitaloceanspaces.com/Molina/5.png" 
                  alt="Director de orquesta dirigiendo una sinfonía" 
                  class="w-full h-full object-cover">
-            <div class="absolute inset-0 bg-gradient-to-r from-black/95 to-black/30 md:bg-gradient-to-b md:from-black/30 md:to-black/95"></div>
+            <div class="absolute inset-0 bg-gradient-to-r from-black/50 to-black/30 md:bg-gradient-to-b md:from-black/30 md:to-black/70"></div>
         </div>
         <div class="relative z-10 max-w-[2000px] mx-auto px-4 sm:px-8 pt-32">
             <div class="max-w-4xl">
-                <p class="text-sm tracking-[0.3em] mb-8 animate-fade-in" style="animation-delay: 0.5s">JOSÉ ANTONIO MOLINA</p>
+                <p class="text-sm tracking-[0.3em] mb-8 animate-fade-in" style="animation-delay: 0.5s">MAESTRO / DIRECTOR</p>
                 <h1 class="text-[12vw] md:text-[7vw] font-light leading-[0.9] mb-8 font-cormorant animate-fade-in" style="animation-delay: 0.8s">
-                    DIRIGIENDO<br/>BRILLANTEZ
+                    JOSE ANTONIO<br/>MOLINA
                 </h1>
-                <div class="h-[1px] w-32 bg-white reveal-line mb-12" style="animation-delay: 1.2s"></div>
-                <p class="text-lg sm:text-xl font-light tracking-wide text-white/80 max-w-xl mb-16 animate-fade-in leading-relaxed" style="animation-delay: 1.5s">
-                    Disfruta del legado de un maestro dominicano que fusiona la música clásica con ritmos caribeños, llevando la pasión y la excelencia a cada escenario.
-                </p>
+
                 <a href="#actuaciones" class="group w-full sm:w-auto px-8 sm:px-12 py-4 border border-white hover:bg-white hover:text-black transition-all duration-500 text-xs tracking-[0.2em] animate-fade-in flex items-center justify-center sm:justify-start gap-4" style="animation-delay: 1.8s">
                     DESCUBRE LAS ACTUACIONES
                     <span class="h-[1px] w-8 bg-current transform transition-transform group-hover:translate-x-2"></span>
